<resources>
    <string name="app_name">List Manager CF</string>
    <string name="action_settings">Settings</string>

    <string name="action_add">Add</string>
    <string name="title_hint">Title</string>
    <string name="author_hint">Author</string>
    <string name="genre_text">Genre</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="delete_button">Delete This Book</string>
    <string name="update_button">Update</string>

    <string-array name="genres">
        <item>Humor</item>
        <item>Thriller</item>
        <item>Horror</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>Fantasy</item>
        <item>Historical Fiction</item>
        <item>Mystery/Detective</item>
    </string-array>
</resources>